--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ node_classifier/data
 node_classifier/model
 node_classifier/model_backup
 node_classifier/cv_model
+node_classifier/cv_model_len1_len5_backup
+node_classifier/results_processed
+node_classifier/results_processed_len1_len5_backup
