modifications to run ke embeddings with my datasets; new file to train cv for those kes

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ node_classifier/cv_model_len1_len5_backup
 node_classifier/results_processed
 node_classifier/results_processed_len1_len5_backup
 node_classifier/tmp
+Embeddings/
