added new files for owl2vec

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_classifier/model
 node_classifier/model_backup
 node_classifier/cv_model
 node_classifier/cv_model_len1_len5_backup
+node_classifier/cv_model_other_kges
 node_classifier/results_processed
 node_classifier/results_processed_len1_len5_backup
 node_classifier/tmp
