modified train_cv_model and run_multiple_scripts to save all the seeds for reproducible results

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_classifier/data
 node_classifier/model
 node_classifier/model_backup
 node_classifier/cv_model
+node_classifier/cv_model_backup
 node_classifier/cv_model_other_kges
 node_classifier/results_processed
 node_classifier/tmp
