--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_classifier/model
 node_classifier/model_backup
 node_classifier/cv_model
 node_classifier/cv_model_backup
+node_classifier/cv_model_data_partitions/
 node_classifier/cv_model_other_kges
 node_classifier/results_processed
 node_classifier/tmp
