--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ node_classifier/cv_model
 node_classifier/cv_model_backup
 node_classifier/cv_model_backup_latest
 node_classifier/cv_model_data_partitions/
+node_classifier/cv_model_data_partitions_backup
+node_classifier/cv_model_single_test_explanations/
 node_classifier/cv_model_test/
 node_classifier/results_processed
 node_classifier/tmp
