--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,20 @@
 __pycache__/
 
 stored_models
+boxplots_NCK_vs_NCX
 node_classifier/data
 node_classifier/model
 node_classifier/model_backup
 node_classifier/cv_model
 node_classifier/cv_model_backup
 node_classifier/cv_model_backup_latest
-node_classifier/cv_model_data_partitions/
+node_classifier/cv_model_data_partitions
 node_classifier/cv_model_data_partitions_backup
-node_classifier/cv_model_single_test_explanations/
-node_classifier/cv_model_test/
+node_classifier/cv_model_single_test_explanations
+node_classifier/cv_model_with_time_stats
+node_classifier/cv_model_test
+node_classifier/cv_model_xgboost
+node_classifier/more_results
 node_classifier/results_processed
 node_classifier/tmp
-Embeddings/
+Embeddings
