--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,23 @@
 ### Jetbrains IDE
 __pycache__/
 
-stored_models
 boxplots_NCK_vs_NCX
+Embeddings
 node_classifier/data
 node_classifier/model
-node_classifier/model_backup
 node_classifier/cv_model
-node_classifier/cv_model_backup
-node_classifier/cv_model_backup_latest
 node_classifier/cv_model_data_partitions
 node_classifier/cv_model_data_partitions_backup
-node_classifier/cv_model_mlp
-node_classifier/cv_model_single_test_explanations
-node_classifier/cv_model_with_time_stats
-node_classifier/cv_model_test
-node_classifier/cv_model_xgboost
+node_classifier/cv_model_mlp_local_final
+node_classifier/cv_model_rf_global_final
+node_classifier/cv_model_rf_local_final
+node_classifier/cv_model_rf_local_single_test_explanations_final
+node_classifier/cv_model_rf_local_with_time_stats_UNFINISHED
+node_classifier/cv_model_xgb_local_final
 node_classifier/more_results
 node_classifier/results_processed
+node_classifier/results_processed_rf_local_final
 node_classifier/tmp
-Embeddings
+to_archive-model_backup
+to_archive-cv_model_backup
+to_archive-explanations
