--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,25 @@ boxplots_NCK_vs_NCX
 Embeddings
 node_classifier/data
 node_classifier/model
+node_classifier/model_backup
 node_classifier/cv_model
 node_classifier/cv_model_data_partitions
 node_classifier/cv_model_data_partitions_backup
+node_classifier/cv_model_mlp_global_final
 node_classifier/cv_model_mlp_local_final
+node_classifier/cv_model_rf_global_before
 node_classifier/cv_model_rf_global_final
 node_classifier/cv_model_rf_local_final
 node_classifier/cv_model_rf_local_single_test_explanations_final
+node_classifier/cv_model_rf_local_with_time_stats_continue
 node_classifier/cv_model_rf_local_with_time_stats_UNFINISHED
+node_classifier/cv_model_xgb_global_final
 node_classifier/cv_model_xgb_local_final
 node_classifier/more_results
 node_classifier/results_processed
+node_classifier/results_processed_mlp_local_final
 node_classifier/results_processed_rf_local_final
+node_classifier/results_processed_xgb_local_final
 node_classifier/tmp
 to_archive-model_backup
 to_archive-cv_model_backup
