--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ node_classifier/tmp
 to_archive-model_backup
 to_archive-cv_model_backup
 to_archive-explanations
+node_classifier/1_multi_random_single_model
+node_classifier/2_model_multi_random
+node_classifier/results_processed_multi_random
